--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 backports.ssl-match-hostname==3.4.0.2
 certifi==2015.9.6.2
+psycopg2==2.6.1
+slackclient==0.16
 tornado==4.2.1
+websocket-client==0.34.0
