Sort help info emoticons my name

--- a/slack_ascii/fixtures/default-emoticons.toml
+++ b/slack_ascii/fixtures/default-emoticons.toml
@@ -104,7 +104,7 @@ content = 't(-.-t)'
 content = '✌(◕‿-)✌'
 
 [robber]
-content = '-╤╗_(◙◙)_╔╤- – – – \o/ \o/ \o/'
+content = '-╤╗_(oo)_╔╤- – – – \o/ \o/ \o/'
 
 [sleeping]
 content = '(-.-)Zzz…'
